--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  easy_localization: ^3.0.4
   flutter:
     sdk: flutter
   http: ^0.13.5
@@ -70,6 +71,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/translations/
   fonts:
      - family: Benzin
        fonts:
