--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  countup: ^0.1.4
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.4
   flutter:
